--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
