--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.8.0",
-    "mongoose": "^6.4.6"
-  },
-  "devDependencies": {
+    "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
   }
 }
