--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src",
+    "start": "node src",
+    "start:local": "nodemon src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
